package com.example.trs;

public class Passenger {

    private String firstName;
    private String lastName;
    private String idType;
    private String idNumber;


}
