package com.example.trs;

public class Seat {

    private String seatNumber;
    private Class aClass;

}
