package com.example.trs;

public class Ticket {

    private Passenger owner;
    private Flight flight;
    private Seat seat;
    private Float price;

}
