@startuml
'https://plantuml.com/class-diagram

class User{
email
}

class Administrator{
}

class Airline{
name
}

class Customer{
firstName
lastName
password
}

class Passenger{
firstName
lastName
identificationType
identificationNumber
}

Administrator "1" --|> User
Customer --|> User
Airline --|> User

class Airport{
referenceCode
address
}

class Flight{
code
time
date
}

class Airplane{
type
}

class Seat{
seatNumber
}

class Ticket{
price
}

class Reservation {

}


enum Class{
First
Business
Economy
}

Reservation "*" -- "1..2" Flight : contains >
Customer "1" -- "*" Reservation : create >
Reservation "*" -- "*" Passenger : contains >

Airline "1" o-- "*" Flight : create >

Seat "1" *-- "1" Ticket
Flight "1" --* "1" Airplane : type >
Flight "1" -- "*" Ticket : has >

Passenger "1" --- "*" Ticket : has >

Flight "*" --* "1" Airport : from >
Flight "*" --* "1" Airport : to >
Flight "*" --o "*" Airport : stops at >
Flight "1" -- "*" Seat : available >

Administrator -- Airport : create >

Customer "*" -- "*" Flight : previous >
Customer "*" -- "*" Flight : upcoming >

Seat "*" --* "1" Class : class >
Seat "*" --* "1" Airplane : has <



@enduml